add flink Avro generic records serialization and refactor the package